fix navbar overlaping by adding zindex

--- a/src/app/components/common/header/header.component.scss
+++ b/src/app/components/common/header/header.component.scss
@@ -1,3 +1,8 @@
+.navbar{
+    z-index: 100;
+    background-color: #161A25;
+}
+
 .navbar-nav{
     justify-content: space-between;
     font-family: "Poppins", sans-serif;
