--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -125,15 +125,6 @@ p {
 }
 
 
-.hero-sec .navbar {
-  background-color: #0000 !important;
-  z-index: 100;
-}
-
-
-
-
-
 // media query
 
 /* Media Query for Bishes Like Galaxy Fold */
